--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,21 @@ android {
     }
 }
 
+//For the robolectric snapshot build
+repositories {
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
-    compile 'com.firebase:firebase-client-android:2.2.1+'
-    compile 'com.firebase:geofire:1.1.0+'
+    compile 'com.firebase:firebase-client-android:2.2.1'
+    compile 'com.firebase:geofire:1.1.0'
+
+    //Testing
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
+    testCompile 'org.robolectric:robolectric:3.0-SNAPSHOT'
+
 }
