--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.gatech.objectsanddesign.shoppingwithfriends" >
 
     <uses-sdk>
-        android:minSdkVersion="15"
+        android:minSdkVersion="17"
     </uses-sdk>
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -22,11 +22,12 @@
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true">
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDwR6Ujb4wOVV0bunV5_rOWE73Mk5Gkb2Q" />
+            android:value="AIzaSyDwR6Ujb4wOVV0bunV5_rOWE73Mk5Gkb2Q" />git
 
         <activity
             android:name=".LoginActivity"
@@ -90,7 +91,8 @@
         </activity>
         <activity
             android:name=".NearbySales"
-            android:label="@string/title_activity_nearby_sales"></activity>
+            android:label="@string/title_activity_nearby_sales">
+        </activity>
     </application>
 
 </manifest>
