--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!--Maps Permisssions-->
+    <!-- Maps Permisssions -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -23,7 +23,6 @@
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDwR6Ujb4wOVV0bunV5_rOWE73Mk5Gkb2Q" />
@@ -90,7 +89,11 @@
         </activity>
         <activity
             android:name=".NearbySales"
-            android:label="@string/title_activity_nearby_sales"></activity>
+            android:label="@string/title_activity_nearby_sales" />
+        <activity
+            android:name=".Account"
+            android:label="@string/title_activity_account" >
+        </activity>
     </application>
 
 </manifest>
